--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,14 +5,14 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(180deg, rgba(20, 20, 31, 0) 57.81%, #14141f),
-    linear-gradient(1turn, rgba(20, 20, 31, 0) 67.84%, rgba(20, 20, 31, 0.7)),
-    linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
-  background-blend-mode: normal, multiply, normal, normal;
+  background-color: #05050675;
 }
 .myGradient {
   background: linear-gradient(180deg, rgba(20, 20, 31, 0) 57.81%, #14141f),
     linear-gradient(1turn, rgba(20, 20, 31, 0) 67.84%, rgba(20, 20, 31, 0.7)),
     linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
   background-blend-mode: normal, multiply, normal, normal;
+}
+h1 {
+  text-shadow: rgb(39, 27, 45) 1px 0 10px;
 }
