--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,14 @@
   font-weight: 800;
   font-style: normal;
 }
+
+.myText {
+  /* opacity: 0; */
+}
+
+.char {
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.35s;
+  display: inline-block;
+}
