--- a/src/App.module.css
+++ b/src/App.module.css
@@ -15,7 +15,8 @@
 }
 h1 {
   position: absolute;
-  width: 100%;
+  width: fit-content;
   text-align: center;
   text-shadow: rgb(39, 27, 45) 1px 0 10px;
+  font-size: 3.5rem;
 }
